// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#DefaultValueRenderer should render DefaultValueRenderer with the tooltip when the label overflow in width 1`] = `
<TooltipTrigger
  label={
    <FormatValueComponent
      value="loreum"
    />
  }
  tooltipPlacement="bottom"
>
  <div
    className="theme-td-default-cell td-default-cell theme-shrink-value"
  >
    <FormatValueComponent
      value="loreum"
    />
  </div>
</TooltipTrigger>
`;

exports[`#DefaultValueRenderer should render DefaultValueRenderer with the tooltip when the label overflow in width 2`] = `
<div
  className="theme-td-default-cell td-default-cell"
>
  <FormatValueComponent
    value="loreum"
  />
</div>
`;

exports[`#DefaultValueRenderer should render a boolean 1`] = `
<div
  className="theme-td-default-cell td-default-cell"
>
  <FormatValueComponent
    value="false"
  />
</div>
`;

exports[`#DefaultValueRenderer should render a bytes 1`] = `
<div
  className="theme-td-default-cell td-default-cell"
>
  <FormatValueComponent
    value="ejfiejifje"
  />
</div>
`;

exports[`#DefaultValueRenderer should render empty when the value is null 1`] = `
<div
  className="theme-td-default-cell td-default-cell"
>
  <FormatValueComponent
    value=""
  />
</div>
`;

exports[`#DefaultValueRenderer should render the leading/trailing special character 1`] = `
<div
  className="theme-td-default-cell td-default-cell"
>
  <FormatValueComponent
    value=" loreum "
  />
</div>
`;

exports[`#DefaultValueRenderer should render without the tooltip 1`] = `
<div
  className="theme-td-default-cell td-default-cell"
>
  <FormatValueComponent
    value="loreum"
  />
</div>
`;
